Add structure & css
Beta version

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-  
+  <div class="wrapper">
+    <header class="header">
+      <div class="logo capitalize"><a href="#">rio coffee</a></div>
+      <nav class="nav">
+        <ul class="nav-list uppercase">
+          <li class="nav-list-item bold"><a href="#" class="nav-list-link">home</a></li>
+          <li class="nav-list-item bold"><a href="#" class="nav-list-link">about</a></li>
+          <li class="nav-list-item bold"><a href="#" class="nav-list-link">services</a></li>
+          <li class="nav-list-item bold"><a href="#" class="nav-list-link">menu</a></li>
+          <li class="nav-list-item btn"><a href="#" class="nav-list-link">contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="main-container"></section>
+    </main>
+    <footer class="footer"><p>&copy; 2022</p></footer>
+  </div>
 </body>
 </html>
