Correct html and css
Final version

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <li class="nav-list-item bold"><a href="#" class="nav-list-link">about</a></li>
           <li class="nav-list-item bold"><a href="#" class="nav-list-link">services</a></li>
           <li class="nav-list-item bold"><a href="#" class="nav-list-link">menu</a></li>
-          <li class="nav-list-item btn"><a href="#" class="nav-list-link">contact</a></li>
         </ul>
       </nav>
+      <li class="nav-list-item btn uppercase bold"><a href="#" class="nav-list-link">contact</a></li>
     </header>
     <main>
       <section class="main-container"></section>
